Commit resource.qrc file (no auto LF)

--- a/resource.qrc
+++ b/resource.qrc
@@ -8,5 +8,6 @@
         <file>images/insert.png</file>
         <file>images/go.png</file>
         <file>images/ics.gif</file>
+        <file>images/list-add-user.png</file>
     </qresource>
 </RCC>
